fix #5 - Arreglamos la duracion del access_token, para que sea necesario refrescarlo cada 15 minutos.

--- a/.env.example
+++ b/.env.example
@@ -20,6 +20,7 @@ EMAIL_HOST_USER=your_email@gmail.com
 EMAIL_HOST_PASSWORD=your_password
 
 # the REFRESH_TOKEN_LIFETIME will be set to 2 times JWT_DAYS_DURATION
-JWT_DAYS_DURATION=1
+JWT_MINUTES_DURATION=15
+REFRESH_TOKEN_LIFETIME=1
 ROTATE_REFRESH_TOKENS=True
 BLACKLIST_AFTER_ROTATION=True
