--- a/.gitignore
+++ b/.gitignore
@@ -1,33 +1,17 @@
 # core
-core/__pycache__
-core/.DS_Store
-core/management/__pycache__
-core/management/.DS_Store
-core/management/commands/__pycache__
-core/management/commands/.DS_Store
 core/.env
+core/.env.*
 
 # root
 .venv
 db.sqlite3
+
+# CACHE
+__pycache__
+**/__pycache__
+# macOS
 .DS_Store
-
-## apps
-apps/__pycache__
-apps/.DS_Store
-
-# auth
-apps/authentication/__pycache__
-apps/authentication/.DS_Store
-apps/authentication/migrations/__pycache__
-apps/authentication/migrations/.DS_Store
-apps/authentication/tests/__pycache__
-apps/authentication/tests/.DS_Store
-apps/authentication/serializers/__pycache__
-apps/authentication/serializers/.DS_Store
-apps/authentication/views/__pycache__
-apps/authentication/views/.DS_Store
-apps/authentication/templatetags/__pycache__
-apps/authentication/templatetags/.DS_Store
-apps/authentication/functions/__pycache__
-apps/authentication/functions/.DS_Store
+**/.DS_Store
+# ides
+.idea/
+.vscode/
