--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -3,7 +3,7 @@ version: '3.9'
 services:
   api:
     build: .
-    command: sh -c "python manage.py wait_for_db && python manage.py migrate && gunicorn core.wsgi:application --bind 0.0.0.0:8000"
+    command: sh -c "python manage.py wait_for_db && python manage.py generate_secret_key --update-env && python manage.py migrate && gunicorn core.wsgi:application --bind 0.0.0.0:8000"
     volumes:
       - .:/app
     ports:
